sectioning nav bar and footer

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,3 +32,13 @@ h2{
 	text-align:left;
 	letter-spacing: .5px;
 }
+
+/*
+* class '.', id starts with '#'
+*/
+
+.footer{
+	text-align:center;
+	margin-top:20px;
+	letter-spacing: .5px;
+}
